chandeliers-lus/tests/compile_fail/ui/tc/extern/no-default-node.stderr
error[E0277]: the trait bound `no_default: Default` is not satisfied
 --> tests/compile_fail/ui/tc/extern/no-default-node.rs:5:17
  |
5 |     extern node no_default() returns ();
  |                 ^^^^^^^^^^ the trait `Default` is not implemented for `no_default`
  |
help: consider annotating `no_default` with `#[derive(Default)]`
  |
3 + #[derive(Default)]
4 | struct no_default {}
  |

error[E0599]: no method named `step` found for struct `no_default` in the current scope
 --> tests/compile_fail/ui/tc/extern/no-default-node.rs:5:17
  |
3 | struct no_default {}
  | ----------------- method `step` not found for this struct
4 | chandeliers_lus::decl! {
5 |     extern node no_default() returns ();
  |                 ^^^^^^^^^^ method not found in `no_default`
  |
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following trait defines an item `step`, perhaps you need to implement it:
          candidate #1: `chandeliers_sem::stepping::Step`
